Basic gameplay mechanics

--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@vueuse/core": "^5.2.0",
     "copy-to-clipboard-ultralight": "^1.0.12",
+    "nanoid": "^3.1.23",
     "socket.io-client": "^4.1.3",
     "vue": "^3.1.5",
     "vue-global-api": "^0.4.1",
