--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^5.2.0",
+    "clone-deep": "^4.0.1",
     "copy-to-clipboard-ultralight": "^1.0.12",
     "nanoid": "^3.1.23",
     "socket.io-client": "^4.1.3",
@@ -16,6 +17,7 @@
     "vue-router": "^4.0.10"
   },
   "devDependencies": {
+    "@types/clone-deep": "^4.0.1",
     "@types/node": "^16.4.11",
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/compiler-sfc": "^3.0.5",
