--- a/app/package.json
+++ b/app/package.json
@@ -7,20 +7,22 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@vueuse/core": "^5.2.0",
+    "@vueuse/core": "^5.3.0",
     "copy-to-clipboard-ultralight": "^1.0.12",
     "lodash": "^4.17.21",
-    "nanoid": "^3.1.23",
+    "nanoid": "^3.1.25",
     "socket.io-client": "^4.1.3",
-    "vue": "^3.1.5",
+    "vue": "^3.2.2",
     "vue-global-api": "^0.4.1",
-    "vue-router": "^4.0.10"
+    "vue-gooey-background": "^1.0.0",
+    "vue-gooey-cursor": "^1.0.3",
+    "vue-router": "^4.0.11"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.172",
-    "@types/node": "^16.4.11",
-    "@vitejs/plugin-vue": "^1.3.0",
-    "@vue/compiler-sfc": "^3.0.5",
+    "@types/node": "^16.6.1",
+    "@vitejs/plugin-vue": "^1.4.0",
+    "@vue/compiler-sfc": "^3.2.2",
     "autoprefixer": "^10.3.1",
     "postcss": "^8.3.6",
     "postcss-advanced-variables": "^3.0.1",
